--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -161,6 +161,7 @@
                                     <h4 class="mega-title">Quản lý bài đăng</h4>
                                     <ul class="stander">
                                         <li><a th:href="@{createPost}">Tạo bài đăng</a></li>
+                                        <li><a th:href="@{managePost}">Quản lý bài đăng</a></li>
                                     </ul>
                                 </div>
                             </div>
