delete same post in postDetail page

--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -56,9 +56,7 @@
                         <a class="nav-link active" th:href="@{/}">TRANG CHỦ</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#">THỜI KHÓA BIỂU
-                            <i class="fa fa-caret-down"></i>
-                        </a>
+                        <a class="nav-link dropdown-toggle" href="#"  data-toggle="dropdown">THỜI KHÓA BIỂU</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" th:href="@{timetableClass}">Thời khóa biểu của lớp</a>
                             <a class="dropdown-item" th:href="@{timetableTeacher}">Thời khóa biểu của giáo viên</a>
