commit to pull code

--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -56,16 +56,16 @@
                         <a class="nav-link active" th:href="@{/}">TRANG CHỦ</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#"  data-toggle="dropdown">THỜI KHÓA BIỂU</a>
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">THỜI KHÓA BIỂU</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" th:href="@{timetableClass}">Thời khóa biểu của lớp</a>
                             <a class="dropdown-item" th:href="@{timetableTeacher}">Thời khóa biểu của giáo viên</a>
-                            <a id="scheduleManagerMenu" class="dropdown-item" th:href="@{manageTimetable}">Quản lý thời
-                                khóa biểu</a>
+                            <a id="scheduleManagerMenu" class="dropdown-item" th:href="@{manageTimetable}">Quản lý thời khóa biểu</a>
                         </div>
                     </li>
+
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#">TRỰC TUẦN<i class="fa fa-caret-down"></i></a>
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">TRỰC TUẦN</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" th:href="@{assignEmulation}">Xem phân công trực tuần</a>
                             <a class="dropdown-item" th:href="@{gradingToEmulation}">Chấm điểm thi đua</a>
@@ -74,8 +74,9 @@
                             <a class="dropdown-item" th:href="@{history}">Xem lịch sử</a>
                         </div>
                     </li>
+
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#">XẾP HẠNG<i class="fa fa-caret-down"></i></a>
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">XẾP HẠNG</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" th:href="@{rankByWeek}">Xếp hạng theo tuần</a>
                             <a class="dropdown-item" th:href="@{rankByMonth}">Xếp hạng theo tháng</a>
