--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -27,6 +27,14 @@
 <header th:fragment="header">
     <nav class="navbar navbar-expand-lg top-navbar d-block myHeader" data-toggle="sticky-onscroll">
         <div class="container justify-content-end header-hotline">
+            <!--Search-->
+            <div class="widget_search">
+                <form aria-label="Search" role="search" title="Tìm kiếm bài viết" class="m-0">
+                    <input aria-label="Search" type="search" class="form-control form-search" name="s"
+                           value="Tìm kiếm" onfocus="if (this.value === 'Tìm kiếm') { this.value = ''; }"
+                           onblur="if (this.value === '') this.value='Tìm kiếm';">
+                </form>
+            </div>
             <!--Contact Number-->
             <div class="d-flex align-items-center contact-number">
                 <span class="icon">
@@ -171,7 +179,7 @@
                         <a class="nav-link" th:href="@{login}">ĐĂNG NHẬP</a>
                     </li>
                     <li class="nav-item dropdown" id="loginSuccessMenu">
-                        <a class="nav-link" href="#"></a>
+                        <a class="nav-link" href="#" ></a>
                         <div class="dropdown-menu">
                             <a th:href="@{userInformation}" class="dropdown-item">Thông tin tài khoản</a>
                             <a th:href="@{changePassword}" class="dropdown-item">Đổi mật khẩu</a>
