--- a/project/src/main/resources/templates/managePost/createPost.html
+++ b/project/src/main/resources/templates/managePost/createPost.html
@@ -13,7 +13,7 @@
     <script th:src="@{/js/public/bootstrap.min.js}"></script>
     <!-- CKEditor -->
     <script th:src="@{/js/public/ckeditor/ckeditor.js}"></script>
-<!--        <script src="https://cdn.ckeditor.com/4.14.1/full/ckeditor.js"></script>-->
+    <!--        <script src="https://cdn.ckeditor.com/4.14.1/full/ckeditor.js"></script>-->
     <!--Font-Awesome-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
     <script th:src="@{/js/public/moment.min.js}"></script>
@@ -29,15 +29,25 @@
         <div class="table-title">
             <h2>TẠO BÀI VIẾT</h2>
         </div>
-
         <div class="text-editor-layout mt-4">
             <div class="form-group editor-header">
                 <label for="titleName">Tiêu đề bài viết</label>
                 <input type="text" class="form-control" id="titleName" placeholder="Tiêu đề bài viết">
             </div>
-            <div class="post-subtitle col-md-6 px-0 d-flex">
-                <input type="date" class="form-control  mr-2" id="inputDate">
-                <input type="text" class="form-control" placeholder="Tác giả">
+            <form method="POST" role="form" enctype="multipart/form-data" id="form-post">
+                <div class="form-group">
+                    <label for="imageCover">Ảnh bìa bài viết</label>
+                    <input type="file" th:name="file" class="form-control-file" id="imageCover" accept="image/*"
+                           onchange="loadFile(event)"/>
+                    <img id="imagePreview"/>
+                </div>
+            </form>
+            <div class="form-check text-left mb-4 p-0">
+                <span class="custom-checkbox">
+                    <input type="checkbox" name="editOptions" value="1">
+                    <label for="1"></label>
+                </span>
+                <span class="ml-3">Ghim bài viết</span>
             </div>
             <div class="post-content">
                 <textarea id="post-editor-text-content" name="post-editor-text-content" cols="80" rows="10">
